[package]
description = "A cool little tool for pulling commit data from a git repository"
license = "MIT"
name = "git-fetch-commits"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.18.1"
byte-unit = "5.1.2"
tempfile = "3.8.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
clap = { version = "4.4.11", features = ["derive"] }
indicatif = "0.17.7"
